fix: address a crash on older devices